diss: some more jstp

--- a/defs.tex
+++ b/defs.tex
@@ -27,14 +27,17 @@
 
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
+\newcommand{\ui}{^{(i)}} % upper i
 
 \newcommand{\ul}[1]{\underline{#1}}
 \newcommand{\ol}[1]{\overline{#1}}
 
 \def\yz{y\uz}
 \def\yn{y\un}
+\def\yi{y\ui}
 \def\byz{\vec{y}\uz}
 \def\byn{\vec{y}\un}
+\def\byi{\vec{y}\ui}
 
 \def\yzl{\ul{y}\uz}
 \def\yzu{\ol{y}\uz}
@@ -42,15 +45,21 @@
 \def\ynl{\ul{y}\un}
 \def\ynu{\ol{y}\un}
 
+\def\yil{\ul{y}\ui}
+\def\yiu{\ol{y}\ui}
+
 \def\nz{n\uz}
-\def\no{n\uo}
 \def\nn{n\un}
+\def\ni{n\ui}
 
 \def\nzl{\ul{n}\uz}
 \def\nzu{\ol{n}\uz}
 
 \def\nnl{\ul{n}\un}
 \def\nnu{\ol{n}\un}
+
+\def\nil{\ul{n}\ui}
+\def\niu{\ol{n}\ui}
 
 \def\taux{\tau(x)}
 \def\ttau{\tilde{\tau}}
@@ -59,6 +68,7 @@
 \def\Y{\mathcal{Y}}
 \def\YZ{\Y\uz}
 \def\YN{\Y\un}
+\def\YI{\Y\ui}
 \def\N{\mathcal{N}}
 \def\NZ{\N\uz}
 \def\NN{\N\un}
@@ -95,6 +105,7 @@
 
 \newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{definition}{Definition}[chapter]
+\newtheorem{remark}{Remark}[chapter]
 \newtheorem{example}{Example}[chapter]
 
 
