diss: iluck nv and idm examples (graphics problem)

--- a/intro.tex
+++ b/intro.tex
@@ -1324,6 +1324,7 @@ For the model to be of any use, we must be able to elicit the bounds for the pri
 The interval $[\yzl_j,\yzu_j]$ simply represents bounds on the prior expectation of the chance $\alpha_j$.
 
 \subsubsection{Fixed Learning Parameter}
+\label{sec:fixedlearningparameter}
 
 Typically, the learning parameter $\nz$ is taken to be $2$
 (not without controversy; see insightful discussions in \textcite{1996:walley::idm}).
