--- a/jstp.tex
+++ b/jstp.tex
@@ -349,9 +349,160 @@ A natural tool to summarize basic properties of the updating process is to look 
 \end{equation}%}
 which is called \emph{main parameter precision gain} here.
 \end{remark}
-Continuing the Normal-Normal and the Dirichlet-Multinomial model as examples,
-inference with \ymodel s will be illustrated.
+Taking the Normal-Normal and the Dirichlet-Multinomial model as concretisations
+of Example~\ref{ex:jstp-1}, inference with \ymodel s is now illustrated.
 
+\begin{example}[Normal-Normal Model]
+\label{ex:ymodel-nv}
+%\noindent\textbf{Example 1a (continued).}
+In the Normal-Normal model as presented in Section~\ref{sec:norm-norm},
+$\yz$ corresponds to the expected value for $\mu$; the choice of $\YZ$ in application should thus be easy.
+To simplify notation, we will assume here and later on that $\sigma^2_0 = 1$.
+%Assuming the prior knowledge suggests values for $\mu$ in the range $[3;4]$, we define
+%${\cal Y}\uz = [\ul{y}\uz ; \ol{y}\uz] = [3;4]$. For fixing
+Let us assume $\YZ = [\yzl ; \yzu] = [3;4]$, and for fixing
+$\nz$, suppose further that we are not very certain about
+this prior range for $\mu$, but still think it is quite a reasonable
+assumption, and so we base it on $5$ pseudo observations by choosing $\nz=5$,
+giving a value of the variance for the prior distribution on $\mu$ of $\frac{1}{5}$.
+%
+%\medskip
+%
+Updating this prior with the i.i.d.\ sample $\x \in \reals^n$ yields%\vspace*{-0.8ex}%
+\begin{align*} %\label{080306-nv_bsp_held}
+\ynl &= \frac{\nz\yzl + \sum_{i=1}^n x_i}{\nz + n}, &%\hspace*{-1.5ex}
+\ynu &= \frac{\nz\yzu + \sum_{i=1}^n x_i}{\nz + n}, &%\hspace*{-1.5ex}
+\nn &= \nz + n\,.%\vspace*{-3.1ex}%
+\end{align*}
+%
+\begin{figure}
+%\fbox{%
+\caption{Prior (left) and posterior (right) credal sets for a sample
+from $\norm(\mu,1)$ drawn as sets of normal cdfs. (Example~\ref{ex:ymodel-nv} in the
+situation of no prior data conflict.)} \label{fig:nv-nfest-nopdc}
+\includegraphics*[height=\textwidth,angle=-90,bb = 165 60 440 765]{fig/jstp-paper_nv_nfest_01-080331.ps}%
+%\includegraphics*[\textwidth]{fig/jstp-paper_nv_nfest_01-080331}%
+%}
+\end{figure}%
+To make this concrete, consider a sample of size $n = 10$
+with $\ttau(\x) = \bar{x} = 4$.
+Then $\YN = [\frac{55}{15} ; \frac{60}{15}] \approx [3.67 ; 4]$,
+${\rm MPI}\un=\frac{1}{3}$ and $\nn = 15$. The posterior credal set
+consists therefore of all convex combinations of normal
+distributions with means in $[3.67 ; 4]$ and variance
+$\frac{1}{15}$.
+%
+% ------------ verschoben anfang
+%
+Prior and posterior beliefs can be illustrated by the union of
+credal intervals calculated as highest density (HD) intervals%
+\footnote{See the concept of highest posterior density (HPD) intervals
+as mentioned in Section~\ref{sec:beta-binom}, which used here also to
+illustrate the prior state of knowledge.}
+%HD intervals\footnote{For a given distribution, a HD interval
+%(for \emph{h}ighest \emph{d}ensity) gives a set
+%of most plausible values identified as the set %with the shortest range
+%of values with highest density
+%resulting / aggregating a certain amount of probability weight $\gamma$.}
+for all distributions in the corresponding credal set.
+As the normal distributions with mean $\yz \in \YZ$ are the extreme points of the prior credal set,
+and the normal distributions are stochastically ordered with respect to the mean,
+the prior union is the interval from the lowest lower border of HD intervals
+(calculated from $\norm(\yzl, \frac{1}{\nz})$) to the highest upper border
+(calculated from $\norm(\yzu, \frac{1}{\nz})$).
+For a probability weight $\gamma = 0.95$, we get $[2.123;\, 4.877]$.
+%
+% ------------ verschoben ende
+%
+The posterior union of HD intervals is
+$[3.161;\, 4.506]$ and, covering a much smaller range as a priori, shows
+the decreasing of uncertainty obtained by the update step, also
+reflected in a main parameter precision gain of ${\rm PG}=\frac{2}{3}$.
+This update step is illustrated in Figure~\ref{fig:nv-nfest-nopdc},
+where the prior and posterior credal set are displayed by the normal
+cumulative distribution functions, the black lines indicating the
+functions defined by the vertices of $\YZ$ and $\YN$, respectively. %\sidenote{statt: that constitute their vertices.}
+The observation $\ttau(\x)$ is marked by the point of the triangle
+in both graphs, and the prior and posterior union of HD intervals are marked
+by a thick line in the graph for the prior and posterior set, respectively.
+\end{example}
+
+\begin{example}[Dirichlet-Multinomial Model]
+\label{ex:ymodel-idm}
+An \ymodel\ based on the Dirichlet-Multinomial Model as discussed in Section~\ref{sec:diri-multi}
+is, for $\YZ = \Y$, equivalent to the imprecise Dirichlet model
+(IDM, see Section~\ref{sec:idm-and-near-ignorance}), and was considered in Section~\ref{sec:fixedlearningparameter}
+for the common-cause failure application.
+
+In the usual applications of the IDM, the aim is to start with prior
+ignorance; this is modelled by choosing $\YZ$ as the unit
+simplex. For $\nz$ values of 1 or 2 are suggested. Here,
+we must rely on the interpretation of $\nz$ as prior strength, as
+there is no interpretation in terms of other
+parameters as in Example~1a.
+%
+%\medskip
+%
+Considering prior knowledge for a three-category multinomial model
+suggesting that extreme values for $\theta_1$ and $\theta_2$ are
+implausible, one could choose
+$\YZ = \{ \yz_1 \in [0.2;0.8] \times \yz_2 \in [0.2;0.8] \times \yz_3 \in [0;0.6]\}$,
+where the upper bound for $\yz_3$ is a result of the unit
+simplex constraint $\sum_{j=1}^k \yz_j = 1$.
+In addition, we choose again $\nz=5$ as in Example~\ref{ex:ymodel-nv}.
+%
+%\medskip
+%
+Considering a sample of size $5$, where $3$ observations are of
+category 1, and $2$ of category 2, we get $\nn = 10$ and the ranges
+$\yn_1 \in [0.4 ; 0.7]$,
+$\yn_2 \in [0.3 ; 0.6]$, and
+$\yn_3 \in [0   ; 0.3]$
+for the posterior class probabilities.
+%For instance, the posterior
+%probability for observing category two or three in the next draw
+%is, by applying conjugacy, between $0.3$ and $0.6$.
+In analogy to Example~\ref{ex:ymodel-nv}, this update step is illustrated with the
+left and center graph of Figure~\ref{fig:idm-nfest-nopdc}, where
+prior and posterior credal sets are represented by cutouts from a
+plane in the three-dimensional parameter space. Each point in the
+plane cutout for the prior set on the left graph represents a
+certain combination of $\yz_1$, $\yz_2$, and $\yz_3$ by the
+magnitude of coordinates. The same applies for the posterior set
+depicted in the center graph. Some additional lines were drawn to
+make locating the cutouts in space more easy.
+%
+\begin{figure}%\hspace*{3.5ex}%
+%\begin{center}%
+%\fbox{%
+\caption{Prior (left) and posterior (center, right) credal sets for samples from
+$\mult(\btheta)$ in accordance with (center) and, as studied in
+Section~\ref{section:fixednschlecht}, contrary to (right) prior
+beliefs. Note that both posterior sets have the same shape and size and differ
+only in location, in contrast to the ones depicted in Figure~\ref{fig:idm-nvar-nopdc}.}
+\begin{tabular}{ccc}%
+\hspace*{-1.2ex}%\fbox{%
+\includegraphics*[height=0.33\textwidth,angle=-90,bb = 100 65 520 385]{fig/jstp-paper_idm_nfest_01-080331.ps}%
+%}
+\hspace*{-1.2ex}%
+&%
+\hspace*{-1.2ex}%\fbox{%
+\includegraphics*[height=0.33\textwidth,angle=-90,bb = 100 470 520 790]{fig/jstp-paper_idm_nfest_01-080331.ps}%
+%}
+\hspace*{-1.2ex}%
+&%
+\hspace*{-1.2ex}%\fbox{%
+\includegraphics*[height=0.33\textwidth,angle=-90,bb = 100 470 520 790]{fig/jstp-paper_idm_nfest_02-080331.ps}%
+%}
+\hspace*{-1.2ex}%
+\end{tabular}%
+%}%
+%Illustration of an update step for Example~1b (IDM / \ymodel).}
+\label{fig:idm-nfest-nopdc}
+%\end{center}%
+%\hfill
+\end{figure}%
+\end{example}
 
 
 
