diss: jstp iluck-pdc

--- a/defs.tex
+++ b/defs.tex
@@ -3,6 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\pdc{prior-data conflict}
+\def\model{LUCK-model}
 \def\ymodel{iLUCK-model}
 \def\nymodel{generalized iLUCK-model}
 
