diss: jstp main section

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -319,3 +319,12 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {399--418},
 }
 
+@article{2005:whitcomb,
+  author = {Whitcomb, Kathleen M.},
+  title = {Quasi-{B}ayesian analysis using imprecise probability assessments and the generalized {B}ayes' rule},
+  journal = {Theory and Decision},
+  year = {2005},
+  volume = {58},
+  pages = {209--238},
+}
+
